--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,13 +12,14 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Button x:Name="ButtonSubmit" Content="Check" HorizontalAlignment="Left" Margin="384,227,0,0" Grid.Row="1" VerticalAlignment="Top" BorderThickness="10,10,10,10" BorderBrush="#FFDADADA" Click="ButtonSubmit_Click"/>
+        <Button x:Name="ButtonSubmit" Content="Check" HorizontalAlignment="Left" Margin="384,236,0,0" Grid.Row="1" VerticalAlignment="Top" BorderThickness="10,10,10,10" BorderBrush="#FFDADADA" Click="ButtonSubmit_Click"/>
         <TextBox x:Name="InputTB" HorizontalAlignment="Left" Margin="261,103,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Check your data." VerticalAlignment="Top" Width="298" TextAlignment="Center" Height="48"/>
         <RadioButton GroupName="typ" Name="mail" Content="E-Mail" HorizontalAlignment="Left" Margin="261,179,0,0" Grid.Row="1" VerticalAlignment="Top"/>
         <RadioButton GroupName="typ" Name ="phone" Content="Phone" HorizontalAlignment="Left" Margin="384,179,0,0" Grid.Row="1" VerticalAlignment="Top"/>
         <RadioButton GroupName="typ" Name="imie" Content="Name" HorizontalAlignment="Left" Margin="508,179,0,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="konsola" HorizontalAlignment="Left" Margin="400,57,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="konsola" HorizontalAlignment="Left" Margin="350,210,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Write down your data and click check" VerticalAlignment="Top" Width="218"/>
         <Button x:Name="subscribeButton" Content="Update DB" HorizontalAlignment="Left" Margin="31,60,0,0" Grid.Row="1" VerticalAlignment="Top" Click="subscribeButton_Click" Height="40"/>
+        <Label Content="Result:" HorizontalAlignment="Left" Margin="287,206,0,0" Grid.Row="1" VerticalAlignment="Top" Width="45"/>
 
     </Grid>
 
